searchbar redone, text no longer overflow buttons

--- a/src/views/Searchbar.module.scss
+++ b/src/views/Searchbar.module.scss
@@ -2,38 +2,38 @@
 
 #searchbar {
   position: relative;
+  display: flex;
 
   width: 100%;
   max-width: 32em;
 
   margin: 3em auto;
+  padding: 0.75em;
+
+  border-radius: 0.25em;
+  border: 1px solid $border;
+  background-color: $emp;
 
   input {
-    width: 100%;
-    padding: 0.75em 1.5em;
+    flex: 1 0;
+    padding: 0 .75em;
 
     font-size: 1rem;
     font-weight: 500;
 
+    margin: 0;
     outline: none;
-    border-radius: 0.25em;
-    border: 1px solid $border;
-    background-color: $emp;
   }
 
   #searchbarControl {
-    position: absolute;
-    top: 0;
-    right: 0;
     height: 100%;
-    padding: 0 1em;
 
     display: flex;
     align-items: center;
 
     &>:not(:first-child) {
-      padding-left: .5em;
       margin-left: .5em;
+      padding-left: .5em;
       box-shadow: -2px 0 $border;
     }
   }
