--- a/src/views/Suggestions.module.scss
+++ b/src/views/Suggestions.module.scss
@@ -10,7 +10,7 @@
   margin: 0 auto;
   padding: 1em;
 
-  color: hsl(0, 0, 85);
+  color: hsl(0, 0%, 85%);
 
   &>button {
     margin: 0;
