--- a/src/views/Track.module.scss
+++ b/src/views/Track.module.scss
@@ -38,7 +38,7 @@
   &:hover>.coverDiv {
     button {
       display: block;
-      background-color: hsl(0, 0, 0%, 0.7);
+      background-color: hsl(0, 0%, 0%, 0.7);
     }
   }
 
